designed password reset system - completed cart page and altered database

--- a/templates/user/password_reset.html
+++ b/templates/user/password_reset.html
@@ -4,7 +4,7 @@
 {% block main %}
 	<!-- main -->
 	<div class="main-w3layouts wrapper">
-		<h1>Login</h1>
+		<h1>Reset your password</h1>
 		<div class="main-agileinfo">
             {% if form.non_field_errors %}
 			    <div class="errors">
@@ -20,10 +20,8 @@
 					<div class="wthree-text">
 						<div class="clear"> </div>
 					</div>
-					<input type="submit" value="LOGIN">
+					<input type="submit" value="Verify Your Email">
 				</form>
-				<p>Don't have an Account? <a href="{% url 'user:register' %}"> SignUp Now! </a></p>
-				<p>Forgot your password? <a href="{% url 'user:password_reset' %}"> Recover your password </a></p>
 			</div>
 		</div>
 	<!-- //main --> 
