--- a/templates/user/password_reset_confirm.html
+++ b/templates/user/password_reset_confirm.html
@@ -20,10 +20,8 @@
 					<div class="wthree-text">
 						<div class="clear"> </div>
 					</div>
-					<input type="submit" value="LOGIN">
+					<input type="submit" value="Change Password">
 				</form>
-				<p>Don't have an Account? <a href="{% url 'user:register' %}"> SignUp Now! </a></p>
-				<p>Forgot your password? <a href="{% url 'user:password_reset' %}"> Recover your password </a></p>
 			</div>
 		</div>
 	<!-- //main --> 
