--- a/templates/base/cart.html
+++ b/templates/base/cart.html
@@ -59,7 +59,7 @@
                             <div class="col-md-4">
                                 <div class="mt-3">
                                     <p class="text-muted mb-2">Price</p>
-                                    <h5 class="mb-0 mt-2">${{ cart.product.price }}</h5>
+                                    <h5 class="mb-0 mt-2">${{ cart.cart_product_price }}</h5>
                                 </div>
                             </div>
                             <div class="col-md-5">
