--- a/templates/user/shipping_progress_seller.html
+++ b/templates/user/shipping_progress_seller.html
@@ -37,16 +37,50 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-sm-8">
-                                    <div class="progress mb-4">
-                                        <div class="progress-bar" role="progressbar" style="width: {{cart.progress_status}}%" aria-valuemin="0" aria-valuemax="100"></div>
-                                    </div>
+                                    {% if cart.progress_status == '100' %}
+                                        <div class="progress mb-4">
+                                            <div class="progress-bar bg-success" role="progressbar" style="width: {{cart.progress_status}}%" aria-valuemin="0" aria-valuemax="100"></div>
+                                        </div>
+                                    {% elif cart.progress_status == '00' %}
+                                        <div class="progress mb-4">
+                                            <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-valuemin="0" aria-valuemax="100"></div>
+                                        </div>
+                                    {% else %}
+                                        <div class="progress mb-4">
+                                            <div class="progress-bar" role="progressbar" style="width: {{cart.progress_status}}%" aria-valuemin="0" aria-valuemax="100"></div>
+                                        </div>
+                                    {% endif %}
                                 </div>
-                                <div class="col-sm d-flex justify-content-center mt-n2">
-                                    <p class="text-primary fs-5 fw-bold">
-                                        {{cart.get_progress_status_display}}   
-                                    </p>
-                                      
+                                <!--Drop Down choice field-->
+                                <div class="col-sm d-flex justify-content-start mt-n2">   
+                                    <div class="dropdown">
+                                        {% if cart.progress_status == '100' %}
+                                            <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                                                {{cart.get_progress_status_display}}
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
+                                                    <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425z"/>
+                                                </svg>   
+                                            </button>
+                                        {% elif cart.progress_status == '00' %}
+                                            <button class="btn btn-danger dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                                                {{cart.get_progress_status_display}}
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+                                                    <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708"/>
+                                                </svg>
+                                            </button>
+                                        {% else %}
+                                            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                                                {{cart.get_progress_status_display}}   
+                                            </button>
+                                        {% endif %}
+                                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                            {% for value, display in cart.progress_status_choices %}
+                                                <li><a class="dropdown-item" href="{% url 'user:shipping-status-update-view' cart.id value %}">{{ display }}</a></li>
+                                            {% endfor %}
+                                        </ul>
+                                    </div>   
                                 </div>
+                                <!--End of Drop Down choice field-->
                             </div>
                         </div>
 
