--- a/templates/user/shop.html
+++ b/templates/user/shop.html
@@ -37,7 +37,7 @@
               <img src="{{ created_product.pic_sample.url }}" width = "100" height="200" style="border-radius: 5px"  class="card-img-top">
               <div class="card-body">
                 <h5 class="card-title">{{created_product.product}}</h5>
-                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{% url 'base:product' created_product.id %}">View</a></div>
+                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{% url 'user:product_stats' created_product.id %}">View</a></div>
               </div>
               <div class="card-footer">
                 <small class="text-muted">Last updated 3 mins ago</small>
