Created product stats view

--- a/templates/base/view_product.html
+++ b/templates/base/view_product.html
@@ -58,7 +58,9 @@
                             <div class="fs-5 mb-5">
                                 <span id="price">{{ product.price }}</span> USD
                                 <br>
-                                <span id="price">10% OFF {{ product.final_price }}</span> USD
+                                <span id="final_price">10% OFF {{ product.final_price }}</span> USD
+                                <br>
+                                <span id="views">Views :{{views}}</span>
                             </div>
                         </div>
                             <!--product specs-->
