--- a/templates/user/product_stats.html
+++ b/templates/user/product_stats.html
@@ -1,49 +1,50 @@
 {% extends 'user/base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
+{% load ratings %}
+{% load comment_tags %}
 {% block content %}
 <div class="container-fluid">
 
     <!-- Page Heading -->
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
         <h1 class="h3 mb-0 text-gray-800">{{product.product}} stats</h1>
-        <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
-                class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>
+        <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+            <i class="fas fa-arrow-up mr-1"></i>Update the product</a>
     </div>
 
     <!-- Content Row -->
     <div class="row">
 
-        <!-- Total Earnings -->
+        <!-- Remaining quantity -->
         <div class="col-xl-3 col-md-6 mb-4">
-            <div class="card border-left-primary shadow h-100 py-2">
+            <div class="card border-left-secondary shadow h-100 py-2">
                 <div class="card-body">
                     <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
-                            <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
-                                Total Earnings for {{product.product}}</div>
-                            <div class="h5 mb-0 font-weight-bold text-gray-800">{{earnings}}</div>
+                            <div class="text-xs font-weight-bold text-secondary text-uppercase mb-1">
+                                Remaining quantity</div>
+                            <div class="h5 mb-0 font-weight-bold text-secondary">{{product.quantity}}</div>
                         </div>
                         <div class="col-auto">
-                            <i class="fas fa-calendar fa-2x text-gray-300"></i>
+                            <img src="{% static 'user/img/noun-quantity-5991412.svg' %}" width="50" height="50" alt="Quantity Icon"/>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
         <!-- Price -->
         <div class="col-xl-3 col-md-6 mb-4">
-            <div class="card border-left-success shadow h-100 py-2">
+            <div class="card border-left-warning shadow h-100 py-2">
                 <div class="card-body">
                     <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
-                            <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+                            <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
                                 Price</div>
                             <div class="h5 mb-0 font-weight-bold text-gray-800">{{product.price}}</div>
                         </div>
                         <div class="col-auto">
-                            <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
+                            <i class="fas fa-dollar-sign fa-2x text-warning"></i>
                         </div>
                     </div>
                 </div>
@@ -52,11 +53,11 @@
 
         <!-- Sold -->
         <div class="col-xl-3 col-md-6 mb-4">
-            <div class="card border-left-info shadow h-100 py-2">
+            <div class="card border-left-success shadow h-100 py-2">
                 <div class="card-body">
                     <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
-                            <div class="text-xs font-weight-bold text-info text-uppercase mb-1">
+                            <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
                                 Sold
                             </div>
                             <div class="row no-gutters align-items-center">
@@ -66,25 +67,25 @@
                             </div>
                         </div>
                         <div class="col-auto">
-                            <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
+                            <i class="fas fa-clipboard-list fa-2x text-success"></i>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <!-- Remaining quantity -->
+        <!-- Total Earnings -->
         <div class="col-xl-3 col-md-6 mb-4">
-            <div class="card border-left-warning shadow h-100 py-2">
+            <div class="card border-left-info shadow h-100 py-2">
                 <div class="card-body">
                     <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
-                            <div class="text-xs font-weight-bold text-warning text-uppercase mb-1">
-                                Remaining quantity</div>
-                            <div class="h5 mb-0 font-weight-bold text-gray-800">{{product.quantity}}</div>
+                            <div class="text-xs font-weight-bold text-info text-uppercase mb-1">
+                                Total Earnings for {{product.product}}</div>
+                            <div class="h5 mb-0 font-weight-bold text-gray-800">{{earnings}}</div>
                         </div>
-                        <div class="col-auto">  
-                            <img src="{% static 'user/img/noun-quantity-5991412.svg' %}" width="50" height="50" alt="Quantity Icon"/>
+                        <div class="col-auto text-info">
+                            <i class="fas fa-calendar fa-2x text-gray-300"></i>
                         </div>
                     </div>
                 </div>
@@ -92,85 +93,97 @@
         </div>
     </div>
 
-    <!-- Content Row -->
-
+    <!-- Row for chart and right-aligned cards -->
     <div class="row">
-
-        <!-- Area Chart -->
-        <div class="col-xl-8 col-lg-7">
-            <div class="card shadow mb-4">
-                <!-- Card Header - Dropdown -->
-                <div
-                    class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                    <h6 class="m-0 font-weight-bold text-primary">Earnings Overview</h6>
-                    <div class="dropdown no-arrow">
-                        <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
-                            aria-labelledby="dropdownMenuLink">
-                            <div class="dropdown-header">Dropdown Header:</div>
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>
+        <!-- Chart container -->
+        <div class="col-xl-9 col-lg-8 mb-4">
+            <div class="card shadow h-100 py-2">
+                <div class="card-body">
+                    <div id="chartContainer" style="height: 300px;"></div>
+                </div>
+            </div>
+        </div>
+        
+        <!-- Right-aligned cards -->
+        <div class="col-xl-3 col-lg-4">
+            <!-- Pending orders -->
+            <div class="mb-4">
+                <div class="card border-left-primary shadow h-100 py-2">
+                    <div class="card-body">
+                        <div class="row no-gutters align-items-center">
+                            <div class="col mr-2">
+                                <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                                    Pending orders</div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800">{{pending_orders}}</div>
+                            </div>
+                            <div class="col-auto text-primary">
+                                <i class='far fa-clock' style='font-size:30px'></i>
+                            </div>
                         </div>
                     </div>
                 </div>
-                <!-- Card Body -->
-                <div class="card-body">
-                    <div class="chart-area">
-                        <canvas id="myAreaChart"></canvas>
+            </div>
+            <!-- Shipped orders -->
+            <div class="mb-4">
+                <div class="card border-left-success shadow h-100 py-2">
+                    <div class="card-body">
+                        <div class="row no-gutters align-items-center">
+                            <div class="col mr-2">
+                                <div class="text-xs font-weight-bold text-success text-uppercase mb-1">
+                                    Shipped orders</div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800">{{shipped_orders}}</div>
+                            </div>
+                            <div class="col-auto text-success">
+                                <i class="fa fa-check" style="font-size:30px"></i>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Cancelled orders -->
+            <div class="mb-4">
+                <div class="card border-left-danger shadow h-100 py-2">
+                    <div class="card-body">
+                        <div class="row no-gutters align-items-center">
+                            <div class="col mr-2">
+                                <div class="text-xs font-weight-bold text-danger text-uppercase mb-1">
+                                    Cancelled orders</div>
+                                <div class="h5 mb-0 font-weight-bold text-gray-800">{{cancelled}}</div>
+                            </div>
+                            <div class="col-auto text-danger">
+                                <i class="fa fa-times fa-2x" aria-hidden="true"></i>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-
-        <!-- Pie Chart -->
-        <div class="col-xl-4 col-lg-5">
-            <div class="card shadow mb-4">
-                <!-- Card Header - Dropdown -->
-                <div
-                    class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                    <h6 class="m-0 font-weight-bold text-primary">Revenue Sources</h6>
-                    <div class="dropdown no-arrow">
-                        <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <i class="fas fa-ellipsis-v fa-sm fa-fw text-gray-400"></i>
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-right shadow animated--fade-in"
-                            aria-labelledby="dropdownMenuLink">
-                            <div class="dropdown-header">Dropdown Header:</div>
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
-                    </div>
-                </div>
-                <!-- Card Body -->
-                <div class="card-body">
-                    <div class="chart-pie pt-4 pb-2">
-                        <canvas id="myPieChart"></canvas>
-                    </div>
-                    <div class="mt-4 text-center small">
-                        <span class="mr-2">
-                            <i class="fas fa-circle text-primary"></i> Direct
-                        </span>
-                        <span class="mr-2">
-                            <i class="fas fa-circle text-success"></i> Social
-                        </span>
-                        <span class="mr-2">
-                            <i class="fas fa-circle text-info"></i> Referral
-                        </span>
-                    </div>
-                </div>
-            </div>
+        <div class="mb-4" style="width: 100%;">
+            {% render_comments product request %}
         </div>
     </div>
 </div>
 <!-- /.container-fluid -->
 
-</div>
+<!-- Scripts for chart -->
+<script>
+    window.onload = function () {
+        var chart = new CanvasJS.Chart("chartContainer", {
+            theme: "light2",
+            title: {
+                text: "View counts"
+            },
+            axisY: {
+                title: "Counts",
+            },
+            data: [{
+                type: "line",
+                yValueFormatString: "#,### Steps",
+                dataPoints: {{ views|safe }}
+            }]
+        });
+        chart.render();
+    }
+</script>
+<script src="{% static 'canvasjs.min.js' %}"></script>
 {% endblock %}
