created product update page and checked reports

--- a/templates/user/product_stats.html
+++ b/templates/user/product_stats.html
@@ -9,7 +9,7 @@
     <!-- Page Heading -->
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
         <h1 class="h3 mb-0 text-gray-800">{{product.product}} stats</h1>
-        <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
+        <a href="{% url 'user:product_update' product.id %}" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm">
             <i class="fas fa-arrow-up mr-1"></i>Update the product</a>
     </div>
 
