--- a/templates/user/base.html
+++ b/templates/user/base.html
@@ -207,9 +207,14 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">Douglas McGee</span>
-                                <img class="img-profile rounded-circle" 
-                                    src="{% static 'user/img/undraw_profile.svg' %}">
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{user.nickname}}</span>
+                                {% if user.profile %}
+                                    <img class="img-profile rounded-circle" 
+                                        src="{{ user.profile.url }}">
+                                {% else %}
+                                    <img class="img-profile rounded-circle" 
+                                        src="{% static 'user/img/undraw_profile.svg' %}">
+                                {% endif %}
                             </a>
                             <!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
