--- a/templates/user/add_image.html
+++ b/templates/user/add_image.html
@@ -18,14 +18,9 @@
                 {% csrf_token %} 
                 <div class="card mb-3">
                   <div class="card-body">
-                    <li class="list-group-item">{{ form.product|as_crispy_field }}</li>
-                    <li class="list-group-item">{{ form.category|as_crispy_field }}</li>
-                    <li class="list-group-item">{{ form.price|as_crispy_field }}</li>
-                    <li class="list-group-item">{{ form.discount_percentage|as_crispy_field }}</li>
-                    <li class="list-group-item">{{ form.description|as_crispy_field }}</li>
-                    <li class="list-group-item">{{ form.specs|as_crispy_field }}</li>
-                    <li class="list-group-item">{{ form.availability|as_crispy_field }}</li>
-                    <input type="submit" value="Confirm">
+                    <li class="list-group-item">{{ form.images|as_crispy_field }}</li>
+                    <input class="btn btn-success" type="submit" value="Confirm">
+                    <a href="{% url 'user:shop' %}" class="btn btn-primary active" role="button" aria-pressed="true">Done</a>
                   </div>
                 </div>
             </form>
