--- a/templates/user/reported_product.html
+++ b/templates/user/reported_product.html
@@ -1,7 +1,13 @@
 {% extends 'user/base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
+
 {% block content %}
+<head>
+  <!--style-->
+  <link href="{% static '/user/css/update-image.css' %}" rel="stylesheet" />
+</head>
+
 <section class="justify-content-center d-flex p-4">
     <!--User update form-->
     <div class="main-w3layouts wrapper">
@@ -9,7 +15,7 @@
         <div class="agileits-top">
           <div class="card mb-3">
             <div class="card-body">
-              <img class="card-img-top" src="{{product.pic_sample.url}}" width = "200" height="300" />
+              <img class="card-img-top" src="{{product.pic_sample.url}}" width="200" height="300" />
               <li class="list-group-item">Product: {{ product.product }}</li>
               <li class="list-group-item">Created By: {{ product.created_by }}</li>
               <li class="list-group-item">Price: {{ product.price }}</li>
@@ -41,5 +47,23 @@
       </div>
     </div>
     <!--End of User update form-->
+</section>
+
+<section class="d-flex justify-content-center p-4">
+  <div class="container">
+    <div class="row">
+        {% for image in product.productimages.all %}
+            <div class="col-md-4 mb-4">
+                <div class="image-container position-relative">
+                    <img src="{{ image.images.url }}" class="image" alt="Image of {{ product.product }}">
+                    <div class="middle">
+                        <a class="btn btn-success" href="#" role="button">Update</a>
+                        <a class="btn btn-danger" href="#" role="button">Delete</a>
+                    </div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+  </div>
 </section>
 {% endblock %}
