designing product view template

--- a/static/base/css/style.css
+++ b/static/base/css/style.css
@@ -108,3 +108,12 @@ a {
     color: #ccc; }
   .close-btn:hover span {
     color: #000; }
+
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+  }
+  .container-fluid {
+      padding: 0;
+  }
