--- a/templates/base/view_product.html
+++ b/templates/base/view_product.html
@@ -4,25 +4,32 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Shop Item - Start Bootstrap Template</title>
+
+    <!-- Bootstrap CSS -->
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
+
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="{% static '/base/assets/favicon.ico' %}" />
-    <!-- Bootstrap icons-->
+
+    <!-- Bootstrap Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-    <!-- Core theme CSS (includes Bootstrap)-->
+
+    <!-- Core theme CSS (includes Bootstrap) -->
     <link href="{% static '/base/css/detail.css' %}" rel="stylesheet" />
-    <link rel="stylesheet" href="{% static '/base/css/bootstrap.min.css' %}">
+
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro:400,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static '/base/css/fonts/icomoon/style.css' %}">
-    <!-- Style -->
     <link rel="stylesheet" href="{% static 'base/css/styles.css' %}">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <!-- Report Success Message -->
@@ -37,6 +44,12 @@
 
     <!-- Navbar -->
     {% include 'base/navbar.html' %}
+    <div class="position-relative position-absolute end-0 me-2 mt-2">
+        <button type="button" class="btn btn-secondary py-auto px-auto mt-auto" data-bs-toggle="modal" data-bs-target="#exampleModalCenter">
+            Report
+        </button>
+    </div>
+    
 
     <!-- Product section -->
     <section class="py-5">
@@ -44,29 +57,19 @@
             <div class="row gx-4 gx-lg-5 align-items-center">
                 <div class="col-md-6">
                     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-                        <!-- Carousel wrapper -->
                         <div id="carouselMaterialStyle" class="carousel slide carousel-fade" data-bs-ride="carousel">
-                            <!-- Indicators -->
                             <div class="carousel-indicators">
                                 {% for image in product.productimages.all %}
                                     <button type="button" data-bs-target="#carouselMaterialStyle" data-bs-slide-to="{{ forloop.counter0 }}" class="{% if forloop.first %}active{% endif %}" aria-current="{% if forloop.first %}true{% endif %}" aria-label="Slide {{ forloop.counter }}"></button>
                                 {% endfor %}
                             </div>
-                            <!-- Inner -->
                             <div class="carousel-inner rounded-5 shadow-4-strong">
                                 {% for image in product.productimages.all %}
                                 <div class="carousel-item {% if forloop.first %}active{% endif %}">
                                     <img src="{{ image.images.url }}" class="d-block w-100" alt="Image of {{ product.product }}" height="500" width="500">
-                                    <div class="carousel-caption d-none d-md-block">
-                                        <h5>{{ product.name }}</h5>
-                                        <p>{{ product.description }}</p>
-                                    </div>
                                 </div>
                                 {% endfor %}
                             </div>
-                            <!-- Inner -->
-                        
-                            <!-- Controls -->
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselMaterialStyle" data-bs-slide="prev">
                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                 <span class="visually-hidden">Previous</span>
@@ -78,19 +81,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 border border-danger pb-2" style="width: 25%; border-radius: 10px;">
                     <h1 class="display-5 fw-bolder">{{ product.product }}</h1>
-                    <div class="fs-5 mb-5">
-                        <span id="price">{{ product.price }}</span> USD
-                        <br>
-                        <span id="final_price">10% OFF {{ product.final_price }}</span> USD
-                        <br>
-                        <span id="views">Views: {{ views }}</span>
-                    </div>
-                    <!-- Product specs -->
-                    <h3>Time limit: {{ product.period }}</h3>
-                    <h3>User amount: {{ product.max_users }}</h3>
+                    <hr>
                     <p class="lead">Description: {{ product.description }}</p>
+                    <span id="views">Views: {{ views }}</span>
                     <table>
                         {% for key, value in product.specs.items %}
                         <tr>
@@ -99,11 +94,16 @@
                         </tr>
                         {% endfor %}
                     </table>
-                    <div class="d-flex">
-                        <a class="btn btn-outline-warning py-auto px-auto mt-auto" href="{% url 'base:add_to_cart' product.id %}"><i class="bi-cart-fill me-1">Add To Cart</i></a>
-                        <button type="button" class="btn btn-secondary py-auto px-auto mt-auto" data-toggle="modal" data-target="#exampleModalCenter">
-                            Report
-                        </button>
+                    <hr>
+                    <div class="fs-5 mb-2">
+                        <div class="bg-danger text-white py-auto px-auto text-center font-weight-bold" id="price" style="border-radius: 5px; font-weight: 600; width: 97%;">{{ product.price }}$</div>
+                        {% if product.discount_percentage %}
+                            <br>
+                            <span id="bg-danger text-white py-auto px-auto text-center font-weight-bold">{{ product.discount_percentage }}% OFF {{ product.final_price }}</span> USD
+                        {% endif %}                        
+                    </div>
+                    <div class="d-flex justify-content-center">
+                        <a class="btn btn-warning py-auto px-auto mt-auto me-2" href="{% url 'base:add_to_cart' product.id %}" style="width: 100%;"><i class="bi-cart-fill me-1">Add To Cart</i></a>
                     </div>
                 </div>
             </div>
@@ -132,57 +132,107 @@
                 </div>
             </div>
         </div>
-    </section>
-    <!-- Related items section -->
-    {% if related_products %}
-    <section class="py-5 bg-light">
-        <div class="container px-4 px-lg-5 mt-5">
-            <h2 class="fw-bolder mb-4">Related products</h2>
-            <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center" style="transition: 0ms;">
-                {% for related_product in related_products %}
-                <div class="col mb-5">
-                    <div class="card h-100">
-                        <!-- Product image-->
-                        <img src="{{ related_product.pic_sample.url }}" class="card-img-top" alt="Image of {{ product.name }}">
-                        <!-- Product details -->
-                        <div class="card-body p-4">
-                            <div class="text-center">
-                                <!-- Product name -->
-                                <h5 class="fw-bolder">{{ related_product.product }}</h5>
-                                <!-- Product price -->
-                                {{ related_product.price }}
-                            </div>
-                        </div>
-                        <!-- Product actions -->
-                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                            <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="{% url 'base:product' related_product.id %}">View</a></div>
-                        </div>
+        <!-- Image Modal -->
+        <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-lg">
+                <div class="modal-content">
+                    <div class="modal-body p-0">
+                        <img id="modalImage" class="img-fluid" alt="Image of {{ product.product }}" style="border-radius: 5px;">
                     </div>
                 </div>
-                {% endfor %}
             </div>
         </div>
     </section>
-    {% endif %}
+
+    <!-- Related items section -->
+{% if related_products %}
+<section class="pt-5 pb-5">
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="d-flex justify-content-between align-items-center mb-3">
+                    <h3>Related Products</h3>
+                    <div>
+                        <a class="btn btn-primary" href="#carouselRelatedProducts" role="button" data-bs-slide="prev">
+                            <i class="fa fa-arrow-left"></i>
+                        </a>
+                        <a class="btn btn-primary" href="#carouselRelatedProducts" role="button" data-bs-slide="next">
+                            <i class="fa fa-arrow-right"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12">
+                <div id="carouselRelatedProducts" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        {% with related_products|slice:":3" as first_slide %}
+                        <div class="carousel-item active">
+                            <div class="row">
+                                {% for related_product in first_slide %}
+                                <div class="col-md-4 mb-3">
+                                    <div class="card h-100">
+                                        <img src="{{ related_product.pic_sample.url }}" class="card-img-top" alt="Image of {{ related_product.product }}">
+                                        <div class="card-body p-4">
+                                            <div class="text-center">
+                                                <h5 class="fw-bolder">{{ related_product.product }}</h5>
+                                                {{ related_product.price }}
+                                            </div>
+                                        </div>
+                                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                            <div class="text-center">
+                                                <a class="btn btn-outline-dark mt-auto" href="{% url 'base:product' related_product.id %}">View</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                {% endfor %}
+                            </div>
+                        </div>
+                        {% endwith %}
+
+                        {% for related_product in related_products|slice:"3:"|slice:"::3" %}
+                        <div class="carousel-item {% if forloop.first %}active{% endif %}">
+                            <div class="row">
+                                <div class="col-md-4 mb-3">
+                                    <div class="card h-100">
+                                        <img src="{{ related_product.pic_sample.url }}" class="card-img-top" alt="Image of {{ related_product.product }}">
+                                        <div class="card-body p-4">
+                                            <div class="text-center">
+                                                <h5 class="fw-bolder">{{ related_product.product }}</h5>
+                                                {{ related_product.price }}
+                                            </div>
+                                        </div>
+                                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                            <div class="text-center">
+                                                <a class="btn btn-outline-dark mt-auto" href="{% url 'base:product' related_product.id %}">View</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        {% endfor %}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+{% endif %}
+
     {% render_comments product request %}
+
     <!-- Footer -->
     <footer class="py-5 bg-dark">
         <div class="container">
             <p class="m-0 text-center text-white">Copyright &copy; Your Website 2023</p>
         </div>
     </footer>
+
     <!-- Bootstrap core JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
-    <!-- Ajax call -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="{% static '/base/js/detail_script.js' %}"></script>
-    <!-- Django-star-ratings call -->
-    <link rel="stylesheet" href="{% static 'star-ratings/css/star-ratings.css' %}">
-    <script type="text/javascript" src="{% static 'star-ratings/js/dist/star-ratings.min.js' %}"></script>
-    <!-- Modal Js -->
-    <script src="{% static '/base/js/jquery-3.3.1.min.js' %}"></script>
-    <script src="{% static '/base/js/popper.min.js' %}"></script>
-    <script src="{% static '/base/js/bootstrap.min.js' %}"></script>
+    <script src="{% static '/base/js/image_modal.js' %}"></script>
 </body>
 </html>
