--- a/templates/user/add_product.html
+++ b/templates/user/add_product.html
@@ -20,10 +20,12 @@
                   <div class="card-body">
                     <li class="list-group-item">{{ form.product|as_crispy_field }}</li>
                     <li class="list-group-item">{{ form.category|as_crispy_field }}</li>
-                    <li class="list-group-item">{{ form.price|as_crispy_field }}</li>
+                    <li class="list-group-item">{{ form.pic_sample|as_crispy_field }}</li>
                     <li class="list-group-item">{{ form.discount_percentage|as_crispy_field }}</li>
+                    <li class="list-group-item">{{ form.price|as_crispy_field }}</li>
                     <li class="list-group-item">{{ form.description|as_crispy_field }}</li>
                     <li class="list-group-item">{{ form.specs|as_crispy_field }}</li>
+                    <li class="list-group-item">{{ form.tags|as_crispy_field }}</li>
                     <li class="list-group-item">{{ form.availability|as_crispy_field }}</li>
                     <input type="submit" value="Confirm">
                   </div>
