--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -1,6 +1,6 @@
 {% load static %}
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
             <!--User profile info-->
             {% if user.is_authenticated %}
             <!--Logout button-->
