--- a/static/base/css/styles.css
+++ b/static/base/css/styles.css
@@ -10829,3 +10829,7 @@ textarea.form-control-lg {
   }
 }
 
+.nav-button {
+  min-width: 150px; /* Adjust the width as needed */
+  text-align: center;
+}
