--- a/templates/base/view_product.html
+++ b/templates/base/view_product.html
@@ -20,6 +20,7 @@
 
     <!-- Core theme CSS (includes Bootstrap) -->
     <link href="{% static '/base/css/detail.css' %}" rel="stylesheet" />
+    <link href="{% static '/base/css/nav-buttons.css' %}" rel="stylesheet" />
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
@@ -44,15 +45,20 @@
 
     <!-- Navbar -->
     {% include 'base/navbar.html' %}
-    <div class="position-relative position-absolute end-0 me-2 mt-2">
-        <button type="button" class="btn btn-secondary py-auto px-auto mt-auto" data-bs-toggle="modal" data-bs-target="#exampleModalCenter">
-            Report
-        </button>
-    </div>
     
 
     <!-- Product section -->
     <section class="py-5">
+
+        <div class="position-relative position-absolute end-0 me-2 mb-n5" style="margin-top: -30px;">
+            <button type="button" class="btn btn-secondary py-auto px-auto mt-auto" data-bs-toggle="modal" data-bs-target="#exampleModalCenter">
+                Report
+            </button>
+        </div>
+        <div class="ms-5" style="margin-top: -30px;">
+            <span class="border border-primary bg-primary border p-2 rounded-pill text-white fw-bolder" id="views" >Views: {{ views }}</span>
+        </div>
+
         <div class="container px-4 px-lg-5 my-5">
             <div class="row gx-4 gx-lg-5 align-items-center">
                 <div class="col-md-6">
@@ -84,17 +90,6 @@
                 <div class="col-md-6 border border-danger pb-2" style="width: 25%; border-radius: 10px;">
                     <h1 class="display-5 fw-bolder">{{ product.product }}</h1>
                     <hr>
-                    <p class="lead">Description: {{ product.description }}</p>
-                    <span id="views">Views: {{ views }}</span>
-                    <table>
-                        {% for key, value in product.specs.items %}
-                        <tr>
-                            <td>{{ key }}:</td>
-                            <td>{{ value }}</td>
-                        </tr>
-                        {% endfor %}
-                    </table>
-                    <hr>
                     <div class="fs-5 mb-2">
                         <div class="bg-danger text-white py-auto px-auto text-center font-weight-bold" id="price" style="border-radius: 5px; font-weight: 600; width: 97%;">{{ product.price }}$</div>
                         {% if product.discount_percentage %}
@@ -106,8 +101,44 @@
                         <a class="btn btn-warning py-auto px-auto mt-auto me-2" href="{% url 'base:add_to_cart' product.id %}" style="width: 100%;"><i class="bi-cart-fill me-1">Add To Cart</i></a>
                     </div>
                 </div>
+                
+            </div>
+            
+        </div>
+        <!--Nav tabs-->
+        <div class="d-flex justify-content-center">
+            <nav>
+                <div class="nav nav-tabs" id="nav-tab" role="tablist">
+                    <button class="nav-link nav-button active" id="nav-description-tab" data-bs-toggle="tab" data-bs-target="#nav-description" type="button" role="tab" aria-controls="nav-description" aria-selected="true">Description</button>
+                    <button class="nav-link nav-button" iD="nav-specifications-tab" data-bs-toggle="tab" data-bs-target="#nav-specifications" type="button" role="tab" aria-controls="nav-specifications" aria-selected="false">Specifications</button>
+                    <button class="nav-link nav-button" id="nav-comments-tab" data-bs-toggle="tab" data-bs-target="#nav-comments" type="button" role="tab" aria-controls="nav-comments" aria-selected="false">Comments</button>
+                </div>
+            </nav>
+        </div>
+        <div class="border-bottom border-secondary"></div>
+        <div class="tab-content" id="nav-tabContent" style="margin-left: 15%;">
+            <div class="tab-pane fade show active" id="nav-description" role="tabpanel" aria-labelledby="nav-description-tab" tabindex="0">
+                <p class="lead" style="font-weight: 500; font-size: 26px;">{{ product.description }}</p>
+            </div>
+            
+            <div class="tab-pane fade" id="nav-specifications" role="tabpanel" aria-labelledby="nav-specifications-tab" tabindex="0">
+                <table>
+                    {% for key, value in product.specs.items %}
+                    <tr style="font-weight: 600; font-size: 28px;">
+                        <td>{{ key }}:</td>
+                        <td>{{ value }}</td>
+                    </tr>
+                    {% endfor %}
+                </table>
+            </div>
+
+            <div class="tab-pane fade" id="nav-comments" role="tabpanel" aria-labelledby="nav-comments-tab" tabindex="0">
+                {% render_comments product request %}
             </div>
         </div>
+        
+        
+        <!--End of Nav tabs-->
         <!-- Modal -->
         <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
@@ -146,7 +177,7 @@
 
     <!-- Related items section -->
 {% if related_products %}
-<section class="pt-5 pb-5">
+<section class="pt-5 pb-5" style="border-top: 1px solid gray; margin-top: 100px;">
     <div class="container">
         <div class="row">
             <div class="col-12">
@@ -219,8 +250,6 @@
     </div>
 </section>
 {% endif %}
-
-    {% render_comments product request %}
 
     <!-- Footer -->
     <footer class="py-5 bg-dark">
